Styling the Blog

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+   <div class="title">
+      <a routerLink=""> My Fancy Blog</a>
+   </div>
+
+   <nav class="navbar">
+    <a routerLink="/article" class="nav-item">Articles</a>
+    <a routerLink="/about" class="nav-item">About</a>
+   </nav>
+</header>
+
+
