ArticleComponent And Routes

--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -11,7 +11,7 @@
             {{ article.date.toDateString()}}
           </div>
           <p [innerHTML]='article.decription'></p>
-          <a href="#" class="continue-reading">Continue Reading</a>
+          <a routerLink="/{{article.key}}" class="continue-reading">Continue Reading</a>
       </div>
     </div>
   </div>
