--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
+.meta-info {
+    color: grey;
+    margin-top: -28px;
+    font-size: 14px;
+}
